fixed footer icon overlap

--- a/css/main.css
+++ b/css/main.css
@@ -339,11 +339,15 @@ MAX 1024px
     font-size: 32px;
   }
 }
-@media all and (max-width: 1024px) {
+@media all and (max-width: 1440px) {
   .links {
     left: 5em;
     right: auto;
     top: 18em;
     bottom: 5em;
+  }
+  .link {
+    width: auto;
+    height: 24px;
   }
 }
