--- a/less/responsive.less
+++ b/less/responsive.less
@@ -9,12 +9,18 @@ MAX 1024px
         font-size: @bigFont;
         // padding: 2.5em;
     }
+   
 }
-@media all and (max-width: 1024px) {
+@media all and (max-width: 1440px) {
     .links {
         left:5em;
         right:auto;
         top:18em;
         bottom: 5em;
     }
+     .link {
+        width: auto;
+        height: 24px;
+    }
+    
 }
